# impw

./: .gitignore  README.md  pyproject.toml
main/impw/: __init__.py  __main__.py
main/impw/src/: config.py  crypto_manager.py  database.py  log.py  paths.py
main/impw/src/cmds/: __init__.py  copy.py  delete.py  edit.py  list.py  new.py  rename.py  show.py
